kubernetes/apps/mautrix-signal/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-signal
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: mautrix-signal
  ports:
    - port: 29328
      targetPort: 29328
      protocol: TCP
      name: http
