kubernetes/apps/mautrix-signal/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mautrix-signal-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  tls:
    secretName: home-lungoo-de-tls
  routes:
    - match: Host(`mautrix-signal.home.lungoo.de`)
      kind: Rule
      services:
        - name: mautrix-signal
          port: 29328
